[package]
name = "wtk"
version = "0.1.0"
edition = "2024"
authors = ["Rein Fernhout"]
description = "Simple widget toolkit"
license = "MIT"
homepage = "https://github.com/LevitatingBusinessMan/wtk"

[lib]
name = "wtk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["sdl3", "xrdb"]

[dependencies]
libc = "0.2.175"
sdl3 = { version = "0", features = ["image"], optional = true }
xrdb = { version = "0.1.1", optional = true }

[dev-dependencies]
mpris = "2.0.1"
