[package]
name = "wtk"
version = "0.6.2"
edition = "2024"
authors = ["Rein Fernhout"]
description = "Simple widget toolkit"
license = "MIT"
homepage = "https://github.com/LevitatingBusinessMan/wtk"

[lib]
name = "wtk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["sdl3", "xrdb", "elm"]
elm = []
log = ["dep:log"]

[dependencies]
libc = "0.2.175"
sdl3 = { version = "0", features = ["image"], optional = true }
xrdb = { version = "0.1.1", optional = true }
log = { version = "0.4", optional = true }

[[example]]
name = "logger"
required-features = ["log"]

[dev-dependencies]
mpris = "2.0.1"
env_logger = "0.11.9"
